# cmake-multi-lib-example

./: .gitignore  README.md  build.sh  clean.sh  run.sh
app/: CMakeLists.txt
app/subbinary/: CMakeLists.txt  main.cpp
docs/: Targets-noconfig 作用.md  安装导出目标.md  安装配置文件.md  导出目标和配置文件关系.md
extlib/: CMakeLists.txt
extlib/extlib1/: CMakeLists.txt  extlib1.h
extlib/extlib1/src/: extlib1.cpp
extlib/extlib1/sync/: sync.cpp  sync.hpp
sublib/: CMakeLists.txt
sublib/sublibrary1/: CMakeLists.txt  sublibrary1Config.cmake
sublib/sublibrary1/load/: load.cpp  load.h
sublib/sublibrary1/mes/: mes.cpp  mes.hpp
sublib/sublibrary1/src/: sublib1.cpp
sublib/sublibrary2/: CMakeLists.txt  sublibrary2Config.cmake
sublib/sublibrary2/include/sublib2/: sublib2.h
sublib/sublibrary2/src/: sublib2.cpp
sublib/sublibrary3/: CMakeLists.txt  sublibrary3Config.cmake
sublib/sublibrary3/include/sublib3/: sublib3.h
sublib/sublibrary3/src/: sublib3.cpp
